--- a/products/static/products/css/style.css
+++ b/products/static/products/css/style.css
@@ -27,6 +27,8 @@
 
 .icon-pencil:before {
   content: "\e905";
+  color: #6464648c;
+  cursor: pointer;
 }
 .icon-undo2:before {
   content: "\e967";
@@ -89,8 +91,17 @@ body{
 	height: 10%;
 	width: 100%;
 	background-color: rgba(158, 125, 125, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-
+.archs{
+  width: 100%;
+  color: #FE7077;
+  text-align: right;
+  margin-right: 5%;
+}
 .main{
   display: flex;
   flex-direction: column;
@@ -124,16 +135,89 @@ body{
   justify-content: center;
 }
 .prod_tabla{
-  width: 90%;
+  width: 100%;
   border-collapse: collapse;
+  display: flex;
+  overflow-y: auto;
 }
 .prod_tabla th{
   background-color: #FE7077!important;
+  padding: 2vw;
 }
 .prod_tabla td{
   background-color: #ffc6c970;
-  padding-left: 2%;
+  font-size: 1vw;
+  padding: 0.5vw;
+  text-align: center;
 }
 .prod_tabla>tbody>tr:nth-child(odd)>td, .prod_tabla>tbody>tr:nth-child(odd)>th {
   background-color: #f7bdc0a8;
   }
+.act{
+  width: 80%;
+  height: 100%;
+}
+.upd{
+  width: 100%;
+  height: 90%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.titulos{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.titulos p{
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(254, 112, 119, 0.15);
+}
+.inputs{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(254, 112, 119, 0.07);
+}
+.inputs input{
+  margin: 0;
+  border: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(128, 27, 32, 0.02);
+  padding: 10%;
+  text-align: justify;
+}
+.bot{
+  height: 10%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.bot input{
+  height: 80%;
+  width: 50%;
+  background-color: rgb(254, 112, 119);
+  color: white;
+  font-family: Comic Sans, Comic Sans MS, cursive;
+  font-weight: bolder;
+}
