--- a/products/templates/products/index.html
+++ b/products/templates/products/index.html
@@ -14,6 +14,8 @@
     		{% block content %}
     		{% endblock %}
     	</div>
-    	<div class="footer"></div>
+    	<div class="footer">
+			<a href="archivos/" class="archs" style="text-decoration: none!important;"><span>Archivos</span></a>
+		</div>
     </body>
 </html>
